// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataDisplay matches snapshot when table is false 1`] = `
.c0 {
  border-radius: 3px;
  height: 100%;
}

<div
  className="c0"
/>
`;

exports[`DataDisplay matches snapshot when table is true 1`] = `
.c0 {
  border-radius: 3px;
  height: 100%;
  text-align: right;
}

<div
  className="c0"
/>
`;
